--- a/Calci.html
+++ b/Calci.html
@@ -76,7 +76,9 @@
 			event.preventDefault();
 			dis('*');
 		}
-		
+		else{
+			event.preventDefault();
+		}
 	}
 	 var stat=0;
 	 var l=0;var r=0;var err=0;
