--- a/Calci.html
+++ b/Calci.html
@@ -79,7 +79,12 @@
 		}
 		else if(event.keyCode==77){
 			event.preventDefault();
-			frm.txt.value=frm.txt.value+result;
+			frm.txt.value=result;
+			e=0;
+			stat=0;
+			l=0;
+			r=0;
+			err=0;
 		}
 		else{
 		event.preventDefault();}
